--- a/index.html
+++ b/index.html
@@ -91,15 +91,18 @@
         style="background-image: url('./assets/images/hero-bg.png')">
         <div class="container">
           <div class="hero-content">
+            <h2 class="hero-subtitle">Discover Relaxation and Wellness in the Heart of Stockholm</h2>
             <p class="hero-subtitle">
               <strong class="strong">The Best</strong>Massage and Wellness Hub
             </p>
 
-            <h1 class="h1 hero-title">Look Better Feel Better</h1>
+            <h1 class="h1 hero-title">Let's Relax Stockholm</h1>
 
             <p class="section-text">
-              Duis mollis felis quis libero dictum vehicula. Duis dictum lorem mi, a faucibus nisi eleifend eu.
+              Welcome to Let's Relax Massage Stockholm, where your journey to a healthier, stress-free lifestyle begins. We specialize in providing personalized massage therapy and wellness solutions designed to rejuvenate your body, mind, and soul.
             </p>
+
+            <P class="hero-subtitle">Our licensed therapists bring years of experience and specialize in various massage techniques, including Swedish, deep tissue, and hot stone therapy.</P>
 
             <a href="#" class="btn btn-primary">Get Started</a>
 
