--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
               Welcome to Let's Relax Massage Stockholm, where your journey to a healthier, stress-free lifestyle begins. We specialize in providing personalized massage therapy and wellness solutions designed to rejuvenate your body, mind, and soul.
             </p>
 
-            <P class="hero-subtitle">Our licensed therapists bring years of experience and specialize in various massage techniques, including Swedish, deep tissue, and hot stone therapy.</P>
+            <P class="hero-subtitle">Our licensed therapists bring years of experience and specialize in various massage techniques, including Swedish, Deep tissue (Sports massage) and Yoga massage.</P>
 
             <a href="#" class="btn btn-primary">Get Started</a>
 
