--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 
             <P class="hero-subtitle">Our licensed therapists bring years of experience and specialize in various massage techniques, including Swedish, Deep tissue (Sports massage) and Yoga massage.</P>
 
-            <a href="#" class="btn btn-primary">Get Started</a>
+            <a target="_blank" href="https://boka.se/letsrelaxspa" class="btn btn-primary">Book Now</a>
 
           </div>
 
