--- a/about.html
+++ b/about.html
@@ -56,7 +56,7 @@
 
         <ul class="navbar-list">
           <li>
-            <a href="#" class="navbar-link active" data-nav-link>Home</a>
+            <a href="index.html" class="navbar-link active" data-nav-link>Home</a>
           </li>
           <li>
             <a href="about.html" class="navbar-link" data-nav-link>About Us</a>
