--- a/about.html
+++ b/about.html
@@ -44,7 +44,7 @@
   -->
   <header class="header" data-header>
     <div class="container">
-      <a href="#" class="logo">
+      <a href="fitness.html" class="logo">
         <ion-icon name="barbell-sharp" aria-hidden="true"></ion-icon>
         <span class="span">F.I.T</span>
       </a>
