--- a/blog.html
+++ b/blog.html
@@ -44,7 +44,7 @@
   -->
   <header class="header" data-header>
     <div class="container">
-      <a href="#" class="logo">
+      <a href="fitness.html" class="logo">
         <ion-icon name="barbell-sharp" aria-hidden="true"></ion-icon>
         <span class="span">F.I.T</span>
       </a>
@@ -91,15 +91,14 @@
         style="background-image: url('./assets/images/hero-bg.png')">
         <div class="container">
           <div class="hero-content">
-            <h2 class="hero-subtitle">Discover Relaxation and Wellness in the Heart of Stockholm</h2>
             <p class="hero-subtitle">
-              <strong class="strong">The Best</strong>Massage and Wellness Hub
+              <strong class="strong">Blog</strong>Healthy Living
             </p>
 
-            <h1 class="h1 hero-title">Let's Relax Stockholm</h1>
+            <h1 class="h1 hero-title">Health and Wellness Lifestyle</h1>
 
             <p class="section-text">
-              Welcome to Let's Relax Massage Stockholm, where your journey to a healthier, stress-free lifestyle begins. We specialize in providing personalized massage therapy and wellness solutions designed to rejuvenate your body, mind, and soul.
+              We combine massage therapy with lifestyle tips to promote long-term health and relaxation.
             </p>
 
             <P class="hero-subtitle">Our licensed therapists bring years of experience and specialize in various massage techniques, including Swedish, Deep tissue (Sports massage) and Yoga massage.</P>
@@ -109,7 +108,7 @@
           </div>
 
           <div class="hero-banner">
-            <img src="./assets/images/hero-banner.png" width="660" height="753" alt="hero banner" class="w-100">
+            <img src="./assets/images/" width="660" height="753" alt="hero banner" class="w-100">
 
             <img src="./assets/images/hero-circle-one.png" width="666" height="666" aria-hidden="true" alt=""
               class="circle circle-1">
