--- a/index.html
+++ b/index.html
@@ -545,11 +545,7 @@
     </article>
   </main>
 
-
-
-
-
-  <!-- 
+<!-- 
     - #FOOTER
   -->
 
@@ -563,11 +559,11 @@
           <a href="#" class="logo">
             <ion-icon name="barbell-sharp" aria-hidden="true"></ion-icon>
 
-            <span class="span">Fitlife</span>
+            <span class="span">F.I.T</span>
           </a>
 
           <p class="footer-brand-text">
-            Etiam suscipit fringilla ullamcorper sed malesuada urna nec odio.
+            Let's Relax Massage Stockholm
           </p>
 
           <div class="wrapper">
@@ -579,13 +575,13 @@
               <li>
                 <p class="footer-brand-title">Monday - Friday</p>
 
-                <p>7:00Am - 10:00Pm</p>
+                <p>09:00Am - 20:00Pm</p>
               </li>
 
               <li>
                 <p class="footer-brand-title">Saturday - Sunday</p>
 
-                <p>7:00Am - 2:00Pm</p>
+                <p>10:00Am - 18:00Pm</p>
               </li>
 
             </ul>
@@ -601,23 +597,23 @@
           </li>
 
           <li>
-            <a href="#" class="footer-link">Home</a>
+            <a href="index.html" class="footer-link">Home</a>
           </li>
 
           <li>
-            <a href="#" class="footer-link">About Us</a>
+            <a href="about.html" class="footer-link">About Us</a>
           </li>
 
           <li>
-            <a href="#" class="footer-link">Classes</a>
+            <a href="treatments.html" class="footer-link">Let's Relax</a>
           </li>
 
           <li>
-            <a href="#" class="footer-link">Blog</a>
+            <a href="#top" class="footer-link">Welllness</a>
           </li>
 
           <li>
-            <a href="#" class="footer-link">Contact Us</a>
+            <a href="contact.html" class="footer-link">Contact Us</a>
           </li>
 
         </ul>
@@ -634,7 +630,8 @@
             </div>
 
             <address class="address footer-link">
-              1247/Plot No. 39, 15th Phase, Colony, Kukatpally, Hyderabad
+              Fridhemsgatan 28, 112 40 Stockholm, Sweden
+              (Inside Danshuset)
             </address>
           </li>
 
@@ -644,9 +641,7 @@
             </div>
 
             <div>
-              <a href="tel:18001213637" class="footer-link">1800-121-3637</a>
-
-              <a href="tel:+915552348765" class="footer-link">+91 555 234-8765</a>
+              <a href="tel:+46700728686" class="footer-link">+46 70-072-8686</a>
             </div>
           </li>
 
@@ -656,16 +651,12 @@
             </div>
 
             <div>
-              <a href="mailto:info@fitlife.com" class="footer-link">info@fitlife.com</a>
-
-              <a href="mailto:services@fitlife.com" class="footer-link">services@fitlife.com</a>
+              <a href="mailto:letsrelaxsweden@gmail.com" class="footer-link">letsrelaxsweden@gmail.com</a>
             </div>
           </li>
-
         </ul>
 
         <ul class="footer-list">
-
           <li>
             <p class="footer-list-title has-before">Our Newsletter</p>
           </li>
@@ -675,7 +666,7 @@
               <input type="email" name="email_address" aria-label="email" placeholder="Email Address" required
                 class="input-field">
 
-              <button type="submit" class="btn btn-primary" aria-label="Submit">
+              <button type="submit" class="btn btn-primary " aria-label="Submit">
                 <ion-icon name="chevron-forward-sharp" aria-hidden="true"></ion-icon>
               </button>
             </form>
@@ -685,28 +676,25 @@
             <ul class="social-list">
 
               <li>
-                <a href="#" class="social-link">
+                <a target="_blank" href="https://www.facebook.com/letsrelaxstockholm" class="social-link">
                   <ion-icon name="logo-facebook"></ion-icon>
                 </a>
               </li>
 
               <li>
-                <a href="#" class="social-link">
+                <a target="_blank" href="https://www.instagram.com/let_s_relax_stockholm" class="social-link">
                   <ion-icon name="logo-instagram"></ion-icon>
                 </a>
               </li>
 
               <li>
-                <a href="#" class="social-link">
-                  <ion-icon name="logo-twitter"></ion-icon>
+                <a target="_blank" href="https://www.linkedin.com/in/kunnikar/" class="social-link">
+                  <ion-icon name="logo-linkedin"></ion-icon>
                 </a>
               </li>
-
             </ul>
           </li>
-
         </ul>
-
       </div>
     </div>
 
@@ -731,12 +719,7 @@
 
       </div>
     </div>
-
   </footer>
-
-
-
-
 
   <!-- 
     - #BACK TO TOP
