Modified page and styles

--- a/blog.html
+++ b/blog.html
@@ -92,14 +92,16 @@
         <div class="container">
           <div class="hero-content">
             <p class="hero-subtitle">
-              <strong class="strong">Blog</strong>Healthy Living
+              <strong class="strong">Your Guide</strong>to a Healthier, Happier Lifestyle
             </p>
 
-            <h1 id="#top" class="h1 hero-title">Health and Wellness Lifestyle</h1>
+            <h1 id="#top" class="h1 hero-title">Health and Wellness</h1>
 
             <p class="section-text">
               We combine massage therapy with lifestyle tips to promote long-term health and relaxation.
             </p>
+
+            <P class="hero-subtitle">Wellness is about more than just physical health—it's a balance of mind, body, and spirit. At Let's Relax Stockholm, we offer wellness solutions designed to help you feel your best, inside and out. From therapeutic massages to lifestyle coaching, we're here to support your journey toward a healthier, more balanced life.</P>
 
             <a target="_blank" href="https://boka.se/letsrelaxspa" class="btn btn-primary">Let's Relax</a>
           </div>
