--- a/fitness.html
+++ b/fitness.html
@@ -98,12 +98,12 @@
             <h1 class="h1 hero-title">Look Better Feel Better</h1>
 
             <p class="section-text">
-              
+              Fitness and massage therapy might seem like two separate paths to wellness, but together they form a powerful duo. At Let's Relax Stockholm, we believe in a holistic approach to health. Whether you're an athlete, a weekend warrior, or someone looking to stay fit and stress-free, combining fitness and massage therapy can help you achieve optimal results.
             </p>
 
-            <P class="hero-subtitle">Our licensed therapists bring years of experience and specialize in various massage techniques, including Swedish, Deep tissue (Sports massage) and Yoga massage.</P>
+            <P class="hero-subtitle">Are you ready to take your health to the next level? We believe true wellness is achieved when fitness and relaxation work hand in hand.</P>
 
-            <a target="_blank" href="https://boka.se/letsrelaxspa" class="btn btn-primary">Book Now</a>
+            <a target="_blank" href="https://boka.se/letsrelaxspa" class="btn btn-primary">Let's Relax</a>
 
           </div>
 
@@ -125,42 +125,6 @@
         - #ABOUT
       -->
 
-      <section class="section hero bg-dark has-after has-bg-image" id="home" aria-label="hero" data-section
-        style="background-image: url('./assets/images/hero-bg.png')">
-        <div class="container">
-          <div class="hero-content">
-            <h2 class="hero-subtitle">Discover Relaxation and Wellness in the Heart of Stockholm</h2>
-            <p class="hero-subtitle">
-              <strong class="strong">The Best</strong>Massage and Wellness Hub
-            </p>
-
-            <h1 class="h1 hero-title">Let's Relax Stockholm</h1>
-
-            <p class="section-text">
-              Welcome to Let's Relax Massage Stockholm, where your journey to a healthier, stress-free lifestyle begins. We specialize in providing personalized massage therapy and wellness solutions designed to rejuvenate your body, mind, and soul.
-            </p>
-
-            <P class="hero-subtitle">Our licensed therapists bring years of experience and specialize in various massage techniques, including Swedish, Deep tissue (Sports massage) and Yoga massage.</P>
-
-            <a target="_blank" href="https://boka.se/letsrelaxspa" class="btn btn-primary">Book Now</a>
-
-          </div>
-
-          <div class="hero-banner">
-            <img src="./assets/images/hero-banner.png" width="660" height="753" alt="hero banner" class="w-100">
-
-            <img src="./assets/images/hero-circle-one.png" width="666" height="666" aria-hidden="true" alt=""
-              class="circle circle-1">
-            <img src="./assets/images/hero-circle-two.png" width="666" height="666" aria-hidden="true" alt=""
-              class="circle circle-2">
-            <img src="./assets/images/heart-rate.svg" width="255" height="270" alt="heart rate"
-              class="abs-img abs-img-1">
-            <img src="./assets/images/calories.svg" width="348" height="224" alt="calories" class="abs-img abs-img-2">  
-          </div>
-        </div>
-      </section>
-
-
       <section class="section about" id="about" aria-label="about">
         <div class="container">
           <div class="about-banner has-after">
@@ -177,9 +141,7 @@
           </div>
           <div class="about-content">
 
-            <p class="section-subtitle">About Us</p>
-
-            <h2 class="h2 section-title">Welcome To Our Fitness Gym</h2>
+            <h2 class="h2 section-title">Welcome To Our Fitness Tips</h2>
 
             <p class="section-text">
               Nam ut hendrerit leo. Aenean vel ipsum nunc. Curabitur in tellus vitae nisi aliquet dapibus non et erat.
@@ -195,13 +157,12 @@
             <div class="wrapper">
 
               <div class="about-coach">
-
                 <figure class="coach-avatar">
-                  <img src="./assets/images/about-coach.jpg" width="65" height="65" loading="lazy" alt="Trainer">
+                  <img src="./assets/images/coach.JPG" width="80" loading="lazy" alt="Trainer">
                 </figure>
 
                 <div>
-                  <h3 class="h3 coach-name">Denis Robinson</h3>
+                  <h3 class="h3 coach-name">Kunnikar Boonbunlu</h3>
 
                   <p class="coach-title">Our Coach</p>
                 </div>
