--- a/index.html
+++ b/index.html
@@ -123,131 +123,19 @@
       </section>
 
       <!-- 
-        - #ABOUT
-      -->
-
-      <section class="section hero bg-dark has-after has-bg-image" id="home" aria-label="hero" data-section
-        style="background-image: url('./assets/images/hero-bg.png')">
-        <div class="container">
-          <div class="hero-content">
-            <h2 class="hero-subtitle">Discover Relaxation and Wellness in the Heart of Stockholm</h2>
-            <p class="hero-subtitle">
-              <strong class="strong">The Best</strong>Massage and Wellness Hub
-            </p>
-
-            <h1 class="h1 hero-title">Let's Relax Stockholm</h1>
-
-            <p class="section-text">
-              Welcome to Let's Relax Massage Stockholm, where your journey to a healthier, stress-free lifestyle begins. We specialize in providing personalized massage therapy and wellness solutions designed to rejuvenate your body, mind, and soul.
-            </p>
-
-            <P class="hero-subtitle">Our licensed therapists bring years of experience and specialize in various massage techniques, including Swedish, Deep tissue (Sports massage) and Yoga massage.</P>
-
-            <a target="_blank" href="https://boka.se/letsrelaxspa" class="btn btn-primary">Book Now</a>
-
-          </div>
-
-          <div class="hero-banner">
-            <img src="./assets/images/hero-banner.png" width="660" height="753" alt="hero banner" class="w-100">
-
-            <img src="./assets/images/hero-circle-one.png" width="666" height="666" aria-hidden="true" alt=""
-              class="circle circle-1">
-            <img src="./assets/images/hero-circle-two.png" width="666" height="666" aria-hidden="true" alt=""
-              class="circle circle-2">
-            <img src="./assets/images/heart-rate.svg" width="255" height="270" alt="heart rate"
-              class="abs-img abs-img-1">
-            <img src="./assets/images/calories.svg" width="348" height="224" alt="calories" class="abs-img abs-img-2">  
-          </div>
-        </div>
-      </section>
-
-
-      <section class="section about" id="about" aria-label="about">
-        <div class="container">
-          <div class="about-banner has-after">
-            <img src="./assets/images/about-banner.png" width="660" height="648" loading="lazy" alt="about banner"
-              class="w-100">
-
-            <img src="./assets/images/about-circle-one.png" width="660" height="534" loading="lazy" aria-hidden="true"
-              alt="" class="circle circle-1">
-            <img src="./assets/images/about-circle-two.png" width="660" height="534" loading="lazy" aria-hidden="true"
-              alt="" class="circle circle-2">
-
-            <img src="./assets/images/fitness.png" width="650" height="154" loading="lazy" alt="fitness"
-              class="abs-img w-100">
-          </div>
-          <div class="about-content">
-
-            <p class="section-subtitle">About Us</p>
-
-            <h2 class="h2 section-title">Welcome To Our Fitness Gym</h2>
-
-            <p class="section-text">
-              Nam ut hendrerit leo. Aenean vel ipsum nunc. Curabitur in tellus vitae nisi aliquet dapibus non et erat.
-              Pellentesque
-              porta sapien non accumsan dignissim curabitur sagittis nulla sit amet dolor feugiat.
-            </p>
-
-            <p class="section-text">
-              Integer placerat vitae metus posuere tincidunt. Nullam suscipit ante ac aliquet viverra vestibulum ante
-              ipsum primis.
-            </p>
-
-            <div class="wrapper">
-
-              <div class="about-coach">
-
-                <figure class="coach-avatar">
-                  <img src="./assets/images/about-coach.jpg" width="65" height="65" loading="lazy" alt="Trainer">
-                </figure>
-
-                <div>
-                  <h3 class="h3 coach-name">Denis Robinson</h3>
-
-                  <p class="coach-title">Our Coach</p>
-                </div>
-
-              </div>
-
-              <a href="#" class="btn btn-primary">Explore More</a>
-
-            </div>
-
-          </div>
-
-        </div>
-      </section>
-
-
-
-
-
-      <!-- 
         - #VIDEO
       -->
-
       <section class="section video" aria-label="video">
         <div class="container">
-
-          <div class="video-card has-before has-bg-image"
-            style="background-image: url('./assets/images/video-banner.jpg')">
-
-            <h2 class="h2 card-title">Explore Fitness Life</h2>
-
-            <button class="play-btn" aria-label="play video">
-              <ion-icon name="play-sharp" aria-hidden="true"></ion-icon>
-            </button>
-
-            <a href="#" class="btn-link has-before">Watch More</a>
-
+          <div>
+            <h2 class="h2 section-title text-center">Experience the Ultimate Relaxation</h2>
+            <video controls poster="./assets/images/video-poster.jpg" class="video-player">
+              <source src="./assets/videos/relax.mp4" type="video/mp4">
+              Your browser does not support the video tag.
+            </video> 
           </div>
-
         </div>
       </section>
-
-
-
-
 
       <!-- 
         - #CLASS
