--- a/blog.html
+++ b/blog.html
@@ -62,7 +62,7 @@
             <a href="about.html" class="navbar-link" data-nav-link>About Us</a>
           </li>
           <li>
-            <a href="treatments.html" class="navbar-link" data-nav-link>Let's Relax</a>
+            <a href="treatments.html" class="navbar-link" data-nav-link>Treatments</a>
           </li>
           <li>
             <a href="blog.html" class="navbar-link active" data-nav-link>Wellness</a>
