--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             <a href="about.html" class="navbar-link" data-nav-link>About Us</a>
           </li>
           <li>
-            <a href="treatments.html" class="navbar-link" data-nav-link>Let's Relax</a>
+            <a href="treatments.html" class="navbar-link" data-nav-link>Treatments</a>
           </li>
           <li>
             <a href="blog.html" class="navbar-link" data-nav-link>Wellness</a>
@@ -111,13 +111,7 @@
           <div class="hero-banner">
             <img src="./assets/images/hero-banner.png" width="660" height="753" alt="hero banner" class="w-100">
 
-            <img src="./assets/images/hero-circle-one.png" width="666" height="666" aria-hidden="true" alt=""
-              class="circle circle-1">
-            <img src="./assets/images/hero-circle-two.png" width="666" height="666" aria-hidden="true" alt=""
-              class="circle circle-2">
-            <img src="./assets/images/heart-rate.svg" width="255" height="270" alt="heart rate"
-              class="abs-img abs-img-1">
-            <img src="./assets/images/calories.svg" width="348" height="224" alt="calories" class="abs-img abs-img-2">  
+            
           </div>
         </div>
       </section>
