--- a/treatments.html
+++ b/treatments.html
@@ -59,7 +59,7 @@
             <a href="index.html" class="navbar-link active" data-nav-link>Home</a>
           </li>
           <li>
-            <a href="about.html" class="navbar-link" data-nav-link>About Us</a>
+            <a href="about.html" class="navbar-link" data-nav-link>About</a>
           </li>
           <li>
             <a href="#" class="navbar-link" data-nav-link>Treatments</a>
@@ -68,7 +68,7 @@
             <a href="blog.html" class="navbar-link" data-nav-link>Wellness</a>
           </li>
           <li>
-            <a href="contact.html" class="navbar-link" data-nav-link>Contact Us</a>
+            <a href="contact.html" class="navbar-link" data-nav-link>Contact</a>
           </li>
         </ul>
       </nav>
