Added images and modified styles

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
       <section class="section video" aria-label="video">
         <div class="container">
           <div>
-            <h2 class="h2 section-title text-center">Experience the Ultimate Relaxation</h2>
+            <h2 class="h2 section-title text-center ">Experience the Ultimate Relaxation</h2>
             <video controls poster="./assets/images/video-poster.jpg" class="video-player">
               <source src="./assets/videos/relax.mp4" type="video/mp4">
               Your browser does not support the video tag.
@@ -132,33 +132,27 @@
       </section>
 
       <!-- 
-        - #CLASS
+        - Treatments
       -->
-
       <section class="section class bg-dark has-bg-image" id="class" aria-label="class"
         style="background-image: url('./assets/images/classes-bg.png')">
         <div class="container">
-
-          <p class="section-subtitle">Our Classes</p>
-
-          <h2 class="h2 section-title text-center">Fitness Classes For Every Goal</h2>
+          <h2 class="h2 section-title text-center">Treatments</h2>
+          <p>Let's Relax Stockholm offers a variety of treatments such as Sports massages (Deep tissue), Reflexology (Foot), Office Syndrome (Back Head & Shoulders), Yoga massage, Aromatherapy
+          and Hot coconut oil massage</p>
 
           <ul class="class-list has-scrollbar">
-
             <li class="scrollbar-item">
               <div class="class-card">
-
                 <figure class="card-banner img-holder" style="--width: 416; --height: 240;">
                   <img src="./assets/images/class-1.jpg" width="416" height="240" loading="lazy" alt="Weight Lifting"
                     class="img-cover">
                 </figure>
 
                 <div class="card-content">
-
                   <div class="title-wrapper">
                     <img src="./assets/images/class-icon-1.png" width="52" height="52" aria-hidden="true" alt=""
                       class="title-icon">
-
                     <h3 class="h3">
                       <a href="#" class="card-title">Weight Lifting</a>
                     </h3>
@@ -169,7 +163,6 @@
                   </p>
 
                   <div class="card-progress">
-
                     <div class="progress-wrapper">
                       <p class="progress-label">Class Full</p>
 
@@ -179,11 +172,8 @@
                     <div class="progress-bg">
                       <div class="progress-bar" style="width: 85%"></div>
                     </div>
-
                   </div>
-
                 </div>
-
               </div>
             </li>
 
@@ -231,14 +221,12 @@
 
             <li class="scrollbar-item">
               <div class="class-card">
-
                 <figure class="card-banner img-holder" style="--width: 416; --height: 240;">
                   <img src="./assets/images/class-3.jpg" width="416" height="240" loading="lazy" alt="Power Yoga"
                     class="img-cover">
                 </figure>
 
                 <div class="card-content">
-
                   <div class="title-wrapper">
                     <img src="./assets/images/class-icon-3.png" width="52" height="52" aria-hidden="true" alt=""
                       class="title-icon">
@@ -318,19 +306,12 @@
         </div>
       </section>
 
-
-
-
-
       <!-- 
         - #BLOG
       -->
 
       <section class="section blog" id="blog" aria-label="blog">
         <div class="container">
-
-          <p class="section-subtitle">Our News</p>
-
           <h2 class="h2 section-title text-center">Latest Blog Feed</h2>
 
           <ul class="blog-list has-scrollbar">
