Added image and modified landing page

--- a/index.html
+++ b/index.html
@@ -145,32 +145,29 @@
             <li class="scrollbar-item">
               <div class="class-card">
                 <figure class="card-banner img-holder" style="--width: 416; --height: 240;">
-                  <img src="./assets/images/class-1.jpg" width="416" height="240" loading="lazy" alt="Weight Lifting"
+                  <img src="./assets/images/sports.webp" width="416" height="240" loading="lazy" alt="Weight Lifting"
                     class="img-cover">
                 </figure>
 
                 <div class="card-content">
                   <div class="title-wrapper">
-                    <img src="./assets/images/class-icon-1.png" width="52" height="52" aria-hidden="true" alt=""
-                      class="title-icon">
                     <h3 class="h3">
-                      <a href="#" class="card-title">Weight Lifting</a>
+                      <a href="#" >Sports Massage</a>
                     </h3>
                   </div>
 
                   <p class="card-text">
-                    Suspendisse nisi libero, cursus ac magna sit amet, fermentum imperdiet nisi.
+                    Sports massage (Deep tissue) is effective because of its technique - consisting of slower, stronger massage that stimulates deep into muscles.
+                  </p> 
+                  <p class="card-price">
+                      600 kr. (30 min)
+                      1200 kr. (60 min)
                   </p>
-
                   <div class="card-progress">
                     <div class="progress-wrapper">
-                      <p class="progress-label">Class Full</p>
-
-                      <span class="progress-value">85%</span>
-                    </div>
-
-                    <div class="progress-bg">
-                      <div class="progress-bar" style="width: 85%"></div>
+                      <button>
+                      <a href="https://boka.se/letsrelaxspa" class="btn btn-primary"><img src="./assets/images/hero-banner.png" alt="">Book Now</a>
+                      </button>
                     </div>
                   </div>
                 </div>
