--- a/index.html
+++ b/index.html
@@ -159,6 +159,7 @@
                   <p class="card-text">
                     Sports massage (Deep tissue) is effective because of its technique - consisting of slower, stronger massage that stimulates deep into muscles.
                   </p> 
+                  <a href="treatments.html #sportmassage">Read More...</a>
                   <p class="card-price">
                       600 kr. (30 min)
                       1200 kr. (60 min)
@@ -176,127 +177,135 @@
 
             <li class="scrollbar-item">
               <div class="class-card">
-
                 <figure class="card-banner img-holder" style="--width: 416; --height: 240;">
-                  <img src="./assets/images/class-2.jpg" width="416" height="240" loading="lazy" alt="Cardio & Strenght"
+                  <img src="./assets/images/reflexology-foot-massage.webp" width="416" height="240" loading="lazy" alt="Weight Lifting"
                     class="img-cover">
                 </figure>
 
                 <div class="card-content">
-
                   <div class="title-wrapper">
-                    <img src="./assets/images/class-icon-2.png" width="52" height="52" aria-hidden="true" alt=""
-                      class="title-icon">
-
                     <h3 class="h3">
-                      <a href="#" class="card-title">Cardio & Strenght</a>
+                      <a href="#" >Reflexology</a>
                     </h3>
                   </div>
 
                   <p class="card-text">
-                    Suspendisse nisi libero, cursus ac magna sit amet, fermentum imperdiet nisi.
+                    This alternative healing method is all about applying pressure on specific points in your ears, hands, and feet overall health.
+                  </p> 
+                  <a href="treatments.html #foot">Read More...</a>
+                  <p class="card-price">
+                      600 kr. (30 min)
+                      1200 kr. (60 min)
                   </p>
-
                   <div class="card-progress">
-
                     <div class="progress-wrapper">
-                      <p class="progress-label">Class Full</p>
-
-                      <span class="progress-value">70%</span>
+                      <button>
+                      <a href="https://boka.se/letsrelaxspa" class="btn btn-primary"><img src="./assets/images/hero-banner.png" alt="">Book Now</a>
+                      </button>
                     </div>
-
-                    <div class="progress-bg">
-                      <div class="progress-bar" style="width: 70%"></div>
-                    </div>
-
                   </div>
-
                 </div>
-
               </div>
             </li>
 
             <li class="scrollbar-item">
               <div class="class-card">
                 <figure class="card-banner img-holder" style="--width: 416; --height: 240;">
-                  <img src="./assets/images/class-3.jpg" width="416" height="240" loading="lazy" alt="Power Yoga"
+                  <img src="./assets/images/Office syndrome.webp" width="416" height="240" loading="lazy" alt="Weight Lifting"
                     class="img-cover">
                 </figure>
 
                 <div class="card-content">
                   <div class="title-wrapper">
-                    <img src="./assets/images/class-icon-3.png" width="52" height="52" aria-hidden="true" alt=""
-                      class="title-icon">
-
                     <h3 class="h3">
-                      <a href="#" class="card-title">Power Yoga</a>
+                      <a href="#" >Office Syndrome</a>
                     </h3>
                   </div>
 
                   <p class="card-text">
-                    Suspendisse nisi libero, cursus ac magna sit amet, fermentum imperdiet nisi.
+                    Soothe away tensions in your upper body, break down knots and improve your flexibility. It helps relieve headaches.
+                  </p> 
+                  <a href="treatments.html #office">Read More...</a>
+                  <p class="card-price">
+                      600 kr. (30 min)
+                      1200 kr. (60 min)
                   </p>
-
                   <div class="card-progress">
-
                     <div class="progress-wrapper">
-                      <p class="progress-label">Class Full</p>
-
-                      <span class="progress-value">90%</span>
+                      <button>
+                      <a href="https://boka.se/letsrelaxspa" class="btn btn-primary"><img src="./assets/images/hero-banner.png" alt="">Book Now</a>
+                      </button>
                     </div>
-
-                    <div class="progress-bg">
-                      <div class="progress-bar" style="width: 90%"></div>
-                    </div>
-
                   </div>
-
                 </div>
-
               </div>
             </li>
 
-            <li class="scrollbar-item">
+           <li class="scrollbar-item">
               <div class="class-card">
-
                 <figure class="card-banner img-holder" style="--width: 416; --height: 240;">
-                  <img src="./assets/images/class-4.jpg" width="416" height="240" loading="lazy" alt="The Fitness Pack"
+                  <img src="./assets/images/Yoga-massage.webp" width="416" height="240" loading="lazy" alt="Weight Lifting"
                     class="img-cover">
                 </figure>
 
                 <div class="card-content">
-
                   <div class="title-wrapper">
-                    <img src="./assets/images/class-icon-4.png" width="52" height="52" aria-hidden="true" alt=""
-                      class="title-icon">
-
                     <h3 class="h3">
-                      <a href="#" class="card-title">The Fitness Pack</a>
+                      <a href="#" >Yoga Massage</a>
                     </h3>
                   </div>
 
                   <p class="card-text">
-                    Suspendisse nisi libero, cursus ac magna sit amet, fermentum imperdiet nisi.
+                   Combining acupressure, and assisted yoga postures while palming and thumbing along the body's energy lines and pressure points.
+                  </p> 
+                  <a href="treatments.html #yoga">Read More...</a>
+                  <p class="card-price">
+                      600 kr. (30 min)
+                      1200 kr. (60 min)
                   </p>
-
                   <div class="card-progress">
-
                     <div class="progress-wrapper">
-                      <p class="progress-label">Class Full</p>
-
-                      <span class="progress-value">60%</span>
+                      <button>
+                      <a href="https://boka.se/letsrelaxspa" class="btn btn-primary"><img src="./assets/images/hero-banner.png" alt="">Book Now</a>
+                      </button>
                     </div>
+                  </div>
+                </div>
+              </div>
+           </li>
 
-                    <div class="progress-bg">
-                      <div class="progress-bar" style="width: 60%"></div>
-                    </div>
+           <li class="scrollbar-item">
+              <div class="class-card">
+                <figure class="card-banner img-holder" style="--width: 416; --height: 240;">
+                  <img src="./assets/images/stretch.webp" width="416" height="240" loading="lazy" alt="Weight Lifting"
+                    class="img-cover">
+                </figure>
 
+                <div class="card-content">
+                  <div class="title-wrapper">
+                    <h3 class="h3">
+                      <a href="#" >Stretch Massage</a>
+                    </h3>
                   </div>
 
+                  <p class="card-text">
+                   Stretch massage is a beneficial and effective way to increase blood flow throughout your body, which can help you feel better from head-to-toe.
+                  </p> 
+                  <a href="treatments.html #stretch">Read More...</a>
+                  <p class="card-price">
+                      700 kr. (30 min)
+                      1400 kr. (60 min)
+                  </p>
+                  <div class="card-progress">
+                    <div class="progress-wrapper">
+                      <button>
+                      <a href="https://boka.se/letsrelaxspa" class="btn btn-primary"><img src="./assets/images/hero-banner.png" alt="">Book Now</a>
+                      </button>
+                    </div>
+                  </div>
                 </div>
-
               </div>
-            </li>
+           </li>
 
           </ul>
 
