--- a/index.html
+++ b/index.html
@@ -307,6 +307,72 @@
               </div>
            </li>
 
+           <li class="scrollbar-item">
+              <div class="class-card">
+                <figure class="card-banner img-holder" style="--width: 416; --height: 240;">
+                  <img src="./assets/images/back&foot-massage.webp" width="416" height="240" loading="lazy" alt="Weight Lifting"
+                    class="img-cover">
+                </figure>
+
+                <div class="card-content">
+                  <div class="title-wrapper">
+                    <h3 class="h3">
+                      <a href="#" >Back & Foot Massage </a>
+                    </h3>
+                  </div>
+
+                  <p class="card-text">
+                   It can help you live a healthier and happier life. Circulation is improved, increased oxygen and nutrient supplies to the brain and body.
+                  </p> 
+                  <a href="treatments.html #back&foot">Read More...</a>
+                  <p class="card-price">
+                      700 kr. (30 min)
+                      1400 kr. (60 min)
+                  </p>
+                  <div class="card-progress">
+                    <div class="progress-wrapper">
+                      <button>
+                      <a href="https://boka.se/letsrelaxspa" class="btn btn-primary"><img src="./assets/images/hero-banner.png" alt="">Book Now</a>
+                      </button>
+                    </div>
+                  </div>
+                </div>
+              </div>
+           </li>
+
+           <li class="scrollbar-item">
+              <div class="class-card">
+                <figure class="card-banner img-holder" style="--width: 416; --height: 240;">
+                  <img src="./assets/images/back&foot-massage.webp" width="416" height="240" loading="lazy" alt="Weight Lifting"
+                    class="img-cover">
+                </figure>
+
+                <div class="card-content">
+                  <div class="title-wrapper">
+                    <h3 class="h3">
+                      <a href="#" >Back & Foot Massage </a>
+                    </h3>
+                  </div>
+
+                  <p class="card-text">
+                   It can help you live a healthier and happier life. Circulation is improved, increased oxygen and nutrient supplies to the brain and body.
+                  </p> 
+                  <a href="treatments.html #back&foot">Read More...</a>
+                  <p class="card-price">
+                      700 kr. (30 min)
+                      1400 kr. (60 min)
+                  </p>
+                  <div class="card-progress">
+                    <div class="progress-wrapper">
+                      <button>
+                      <a href="https://boka.se/letsrelaxspa" class="btn btn-primary"><img src="./assets/images/hero-banner.png" alt="">Book Now</a>
+                      </button>
+                    </div>
+                  </div>
+                </div>
+              </div>
+           </li>
+
           </ul>
 
         </div>
