--- a/index.html
+++ b/index.html
@@ -343,24 +343,24 @@
            <li class="scrollbar-item">
               <div class="class-card">
                 <figure class="card-banner img-holder" style="--width: 416; --height: 240;">
-                  <img src="./assets/images/back&foot-massage.webp" width="416" height="240" loading="lazy" alt="Weight Lifting"
+                  <img src="./assets/images/hotoil.webp" width="416" height="240" loading="lazy" alt="Weight Lifting"
                     class="img-cover">
                 </figure>
 
                 <div class="card-content">
                   <div class="title-wrapper">
                     <h3 class="h3">
-                      <a href="#" >Back & Foot Massage </a>
+                      <a href="#" >Hot Oil Massage </a>
                     </h3>
                   </div>
 
                   <p class="card-text">
-                   It can help you live a healthier and happier life. Circulation is improved, increased oxygen and nutrient supplies to the brain and body.
+                   The warm coconut oil makes this massage even more relaxing, is packed with benefits as it is healing and nourishing to the skin.  
                   </p> 
-                  <a href="treatments.html #back&foot">Read More...</a>
+                  <a href="treatments.html #hotoil">Read More...</a>
                   <p class="card-price">
-                      700 kr. (30 min)
-                      1400 kr. (60 min)
+                      800 kr. (30 min)
+                      1600 kr. (60 min)
                   </p>
                   <div class="card-progress">
                     <div class="progress-wrapper">
