modified links and style

--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                   <p class="card-text">
                     Sports massage (Deep tissue) is effective because of its technique - consisting of slower, stronger massage that stimulates deep into muscles.
                   </p> 
-                  <a href="treatments.html #sportmassage">Read More...</a>
+                  <a class="readMore" href="treatments.html #sportmassage">Read More...</a>
                   <p class="card-price">
                       600 kr. (30 min)
                       1200 kr. (60 min)
@@ -192,7 +192,7 @@
                   <p class="card-text">
                     This alternative healing method is all about applying pressure on specific points in your ears, hands, and feet overall health.
                   </p> 
-                  <a href="treatments.html #foot">Read More...</a>
+                  <a class="readMore" href="treatments.html #foot">Read More...</a>
                   <p class="card-price">
                       600 kr. (30 min)
                       1200 kr. (60 min)
@@ -225,7 +225,7 @@
                   <p class="card-text">
                     Soothe away tensions in your upper body, break down knots and improve your flexibility. It helps relieve headaches.
                   </p> 
-                  <a href="treatments.html #office">Read More...</a>
+                  <a class="readMore" href="treatments.html #office">Read More...</a>
                   <p class="card-price">
                       600 kr. (30 min)
                       1200 kr. (60 min)
@@ -258,7 +258,7 @@
                   <p class="card-text">
                    Combining acupressure, and assisted yoga postures while palming and thumbing along the body's energy lines and pressure points.
                   </p> 
-                  <a href="treatments.html #yoga">Read More...</a>
+                  <a class="readMore" href="treatments.html #yoga">Read More...</a>
                   <p class="card-price">
                       600 kr. (30 min)
                       1200 kr. (60 min)
@@ -291,7 +291,7 @@
                   <p class="card-text">
                    Stretch massage is a beneficial and effective way to increase blood flow throughout your body, which can help you feel better from head-to-toe.
                   </p> 
-                  <a href="treatments.html #stretch">Read More...</a>
+                  <a class="readMore" href="treatments.html #stretch">Read More...</a>
                   <p class="card-price">
                       700 kr. (30 min)
                       1400 kr. (60 min)
@@ -324,7 +324,7 @@
                   <p class="card-text">
                    It can help you live a healthier and happier life. Circulation is improved, increased oxygen and nutrient supplies to the brain and body.
                   </p> 
-                  <a href="treatments.html #back&foot">Read More...</a>
+                  <a class="readMore" href="treatments.html #back&foot">Read More...</a>
                   <p class="card-price">
                       700 kr. (30 min)
                       1400 kr. (60 min)
@@ -357,7 +357,40 @@
                   <p class="card-text">
                    The warm coconut oil makes this massage even more relaxing, is packed with benefits as it is healing and nourishing to the skin.  
                   </p> 
-                  <a href="treatments.html #hotoil">Read More...</a>
+                  <a class="readMore" href="treatments.html #hotoil">Read More...</a>
+                  <p class="card-price">
+                      800 kr. (30 min)
+                      1600 kr. (60 min)
+                  </p>
+                  <div class="card-progress">
+                    <div class="progress-wrapper">
+                      <button>
+                      <a href="https://boka.se/letsrelaxspa" class="btn btn-primary"><img src="./assets/images/hero-banner.png" alt="">Book Now</a>
+                      </button>
+                    </div>
+                  </div>
+                </div>
+              </div>
+           </li>
+
+           <li class="scrollbar-item">
+              <div class="class-card">
+                <figure class="card-banner img-holder" style="--width: 416; --height: 240;">
+                  <img src="./assets/images/aromatherapy-massage.webp" width="416" height="240" loading="lazy" alt="Weight Lifting"
+                    class="img-cover">
+                </figure>
+
+                <div class="card-content">
+                  <div class="title-wrapper">
+                    <h3 class="h3">
+                      <a href="#" >Aromatherapy</a>
+                    </h3>
+                  </div>
+
+                  <p class="card-text">
+                   This therapy has been known to promote relaxation and a sense of calm in the body, which is half the work done towards healing. For relaxation and stress relief.  
+                  </p> 
+                  <a class="readMore" href="treatments.html #hotoil">Read More...</a>
                   <p class="card-price">
                       800 kr. (30 min)
                       1600 kr. (60 min)
