--- a/about.html
+++ b/about.html
@@ -56,10 +56,10 @@
 
         <ul class="navbar-list">
           <li>
-            <a href="index.html" class="navbar-link active" data-nav-link>Home</a>
+            <a href="index.html" class="navbar-link " data-nav-link>Home</a>
           </li>
           <li>
-            <a href="about.html" class="navbar-link" data-nav-link>About</a>
+            <a href="about.html" class="navbar-link active" data-nav-link>About</a>
           </li>
           <li>
             <a href="treatments.html" class="navbar-link" data-nav-link>Treatments</a>
@@ -91,33 +91,29 @@
         style="background-image: url('./assets/images/hero-bg.png')">
         <div class="container">
           <div class="hero-content">
-            <h2 class="hero-subtitle">Discover Relaxation and Wellness in the Heart of Stockholm</h2>
+            <h2 class="hero-subtitle">Your Partner in Wellness and Relaxation</h2>
             <p class="hero-subtitle">
               <strong class="strong">The Best</strong>Massage and Wellness Hub
             </p>
 
-            <h1 class="h1 hero-title">Let's Relax Stockholm</h1>
+            <h1 class="h1 hero-title">About Us</h1>
 
             <p class="section-text">
-              Welcome to Let's Relax Massage Stockholm, where your journey to a healthier, stress-free lifestyle begins. We specialize in providing personalized massage therapy and wellness solutions designed to rejuvenate your body, mind, and soul.
+              At Let's Relax Stockhom, we believe that wellness is more than a luxury—it's a lifestyle. Founded in Stockholm, our mission is to provide a sanctuary where you can escape the daily grind and embrace tranquility.
             </p>
 
-            <P class="hero-subtitle">Our licensed therapists bring years of experience and specialize in various massage techniques, including Swedish, Deep tissue (Sports massage) and Yoga massage.</P>
+            <P class="hero-subtitle">Our highly trained team offers a range of services tailored to your individual needs, whether you're looking to ease muscle tension, recover from workouts, or simply unwind.</P>
+
+            <p class="section-text">We're proud to serve Stockholm's community, combining traditional massage techniques with modern wellness practices. Let us help you recharge, refocus, and rejuvenate.</p>
 
             <a target="_blank" href="https://boka.se/letsrelaxspa" class="btn btn-primary">Book Now</a>
 
           </div>
 
           <div class="hero-banner">
-            <img src="./assets/images/hero-banner.png" width="660" height="753" alt="hero banner" class="w-100">
-
-            <img src="./assets/images/hero-circle-one.png" width="666" height="666" aria-hidden="true" alt=""
-              class="circle circle-1">
-            <img src="./assets/images/hero-circle-two.png" width="666" height="666" aria-hidden="true" alt=""
-              class="circle circle-2">
-            <img src="./assets/images/heart-rate.svg" width="255" height="270" alt="heart rate"
-              class="abs-img abs-img-1">
-            <img src="./assets/images/calories.svg" width="348" height="224" alt="calories" class="abs-img abs-img-2">  
+            <img  src="./assets/images/profile.jpg" width="660" height="753" alt="hero banner" class="w-100 profile-about">
+           <h2 class="abs-img abs-img-1">Therapist 💆🏻‍♀️</h2>
+            <h2 class="abs-img abs-img-2">Hi I'm your Therapist 👋🏻 </h2>
           </div>
         </div>
       </section>
