--- a/contact.html
+++ b/contact.html
@@ -56,7 +56,7 @@
 
         <ul class="navbar-list">
           <li>
-            <a href="index.html" class="navbar-link active" data-nav-link>Home</a>
+            <a href="index.html" class="navbar-link " data-nav-link>Home</a>
           </li>
           <li>
             <a href="about.html" class="navbar-link" data-nav-link>About</a>
@@ -68,7 +68,7 @@
             <a href="blog.html" class="navbar-link" data-nav-link>Wellness</a>
           </li>
           <li>
-            <a href="contact.html" class="navbar-link" data-nav-link>Contact</a>
+            <a href="contact.html" class="navbar-link active" data-nav-link>Contact</a>
           </li>
         </ul>
       </nav>
