--- a/treatments.html
+++ b/treatments.html
@@ -56,13 +56,13 @@
 
         <ul class="navbar-list">
           <li>
-            <a href="index.html" class="navbar-link active" data-nav-link>Home</a>
+            <a href="index.html" class="navbar-link " data-nav-link>Home</a>
           </li>
           <li>
             <a href="about.html" class="navbar-link" data-nav-link>About</a>
           </li>
           <li>
-            <a href="#" class="navbar-link" data-nav-link>Treatments</a>
+            <a href="#" class="navbar-link active" data-nav-link>Treatments</a>
           </li>
           <li>
             <a href="blog.html" class="navbar-link" data-nav-link>Wellness</a>
