--- a/contact.html
+++ b/contact.html
@@ -91,33 +91,23 @@
         style="background-image: url('./assets/images/hero-bg.png')">
         <div class="container">
           <div class="hero-content">
-            <h2 class="hero-subtitle">Discover Relaxation and Wellness in the Heart of Stockholm</h2>
-            <p class="hero-subtitle">
-              <strong class="strong">The Best</strong>Massage and Wellness Hub
-            </p>
+            
+            <h1 class="h1 hero-title">Let's Relax! </h1>
 
-            <h1 class="h1 hero-title">Let's Relax Stockholm</h1>
+            <P class="hero-subtitle">Hours Of Operations :</P>
+            <p class="section-text">Monday - Saturday  : 10.00 - 18.00 </p>
 
-            <p class="section-text">
-              Welcome to Let's Relax Massage Stockholm, where your journey to a healthier, stress-free lifestyle begins. We specialize in providing personalized massage therapy and wellness solutions designed to rejuvenate your body, mind, and soul.
-            </p>
-
-            <P class="hero-subtitle">Our licensed therapists bring years of experience and specialize in various massage techniques, including Swedish, Deep tissue (Sports massage) and Yoga massage.</P>
-
+            <P class="hero-subtitle">Closed For The Holidays : </P>
+             <p class="section-text">23 Nov - 10 Dec​​</p>
+             
             <a target="_blank" href="https://boka.se/letsrelaxspa" class="btn btn-primary">Book Now</a>
 
           </div>
 
           <div class="hero-banner">
-            <img src="./assets/images/hero-banner.png" width="660" height="753" alt="hero banner" class="w-100">
-
-            <img src="./assets/images/hero-circle-one.png" width="666" height="666" aria-hidden="true" alt=""
-              class="circle circle-1">
-            <img src="./assets/images/hero-circle-two.png" width="666" height="666" aria-hidden="true" alt=""
-              class="circle circle-2">
-            <img src="./assets/images/heart-rate.svg" width="255" height="270" alt="heart rate"
-              class="abs-img abs-img-1">
-            <img src="./assets/images/calories.svg" width="348" height="224" alt="calories" class="abs-img abs-img-2">  
+            <img src="" alt="">
+            <p class="abs-img abs-img-1">Book Online 📆</p>
+            <p class="abs-img abs-img-2">No Drops in⁉️</p> 
           </div>
         </div>
       </section>
