--- a/fitness.html
+++ b/fitness.html
@@ -11,7 +11,7 @@
   <!-- 
     - favicon
   -->
-  <link rel="shortcut icon" href="./favicon.svg" type="image/svg+xml">
+  <link rel="shortcut icon" href="./favicon.png" type="image/svg+xml">
 
   <!-- 
     - custom css link
@@ -158,7 +158,7 @@
 
               <div class="about-coach">
                 <figure class="coach-avatar">
-                  <img src="./assets/images/coach.JPG" width="80" loading="lazy" alt="Trainer">
+                  <img src="./assets/images/coach.jpeg" width="80" loading="lazy" alt="Trainer">
                 </figure>
 
                 <div>
