--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
   <!-- 
     - favicon
   -->
-  <link rel="shortcut icon" href="./favicon.svg" type="image/svg+xml">
+  <!-- 
+    - favicon
+  -->
+  <link rel="shortcut icon" href="favicon-relax.png" type="image/svg+xml">
 
   <!-- 
     - custom css link
@@ -697,9 +700,6 @@
   <a href="#top" class="back-top-btn" aria-label="back to top" data-back-top-btn>
     <ion-icon name="caret-up-sharp" aria-hidden="true"></ion-icon>
   </a>
-
-
-
 
 
   <!-- 
