Modified footer links to the map

--- a/about.html
+++ b/about.html
@@ -530,7 +530,8 @@
 
           <li class="footer-list-item">
             <div class="icon">
-              <ion-icon name="location" aria-hidden="true"></ion-icon>
+              <a href="contact.html#map">
+              <ion-icon name="location" aria-hidden="true"></ion-icon></a>
             </div>
 
             <address class="address footer-link">
