--- a/contact.html
+++ b/contact.html
@@ -118,7 +118,7 @@
               Fridhemsplan Station</p>
           
         
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d8140.013054363591!2d18.019176643485444!3d59.332899340045174!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x465f9d5fb784ce65%3A0x1b1af122c0db19cf!2sLet%E2%80%99s%20Relax%20Best%20Massage%20Stockholm!5e0!3m2!1sen!2sse!4v1732303620154!5m2!1sen!2sse"  width="600" height="450" style="border:0; " allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        <iframe id="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d8140.013054363591!2d18.019176643485444!3d59.332899340045174!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x465f9d5fb784ce65%3A0x1b1af122c0db19cf!2sLet%E2%80%99s%20Relax%20Best%20Massage%20Stockholm!5e0!3m2!1sen!2sse!4v1732303620154!5m2!1sen!2sse"  width="600" height="450" style="border:0; " allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
       </div>
       </section>
