--- a/treatments.html
+++ b/treatments.html
@@ -444,6 +444,9 @@
   -->
   <script src="./assets/js/script.js" defer></script>
 
+<!-- tripadvisor review link -->
+  <script async src="https://www.jscache.com/wejs?wtype=selfserveprop&amp;uniq=612&amp;locationId=12631041&amp;lang=en_US&amp;rating=true&amp;nreviews=5&amp;writereviewlink=true&amp;popIdx=true&amp;iswide=false&amp;border=true&amp;display_version=2" data-loadtrk onload="this.loadtrk=true"></script>
+
   <!-- 
     - ionicon link
   -->
