--- a/index.html
+++ b/index.html
@@ -509,7 +509,8 @@
             </li>
 
           </ul>
-
+          <!-- Google review -->
+          <div class="elfsight-app-be61c573-0eba-472e-8a01-a2d0a7a4a160" hight="100px" data-elfsight-app-lazy></div>
         </div>
       </section>
 
@@ -690,6 +691,13 @@
     - custom js link
   -->
   <script src="./assets/js/script.js" defer></script>
+
+  <!-- 
+    - google review link
+  -->
+    <!-- Google review link -->
+  <script src="https://static.elfsight.com/platform/platform.js" async></script>
+
 
 <!-- tripadvisor review link -->
   <script async src="https://www.jscache.com/wejs?wtype=selfserveprop&amp;uniq=612&amp;locationId=12631041&amp;lang=en_US&amp;rating=true&amp;nreviews=5&amp;writereviewlink=true&amp;popIdx=true&amp;iswide=false&amp;border=true&amp;display_version=2" data-loadtrk onload="this.loadtrk=true"></script>
